--- a/flaskr/templates/moodrating.html
+++ b/flaskr/templates/moodrating.html
@@ -36,13 +36,13 @@
         <div class="entrydetails">
             <div class="notes">
                 <p>Notes</p>
-                <textarea rows="17" cols="50" name="entrytext"></textarea>
+                <textarea rows="17" cols="40" name="entrytext"></textarea>
             </div>
         </div>
 
-        <div class="save_btn">
+        <div class="save_btn center">
             <!-- <input type="submit" name="submit" value="Save"> -->
-            <button type="submit">Save</button>
+            <button type="submit" class="black_btn">Save</button>
         </div>
     </form>
 {% endblock %}
