--- a/flaskr/static/SignUpPage.css
+++ b/flaskr/static/SignUpPage.css
@@ -2,15 +2,8 @@ html, body {
     background-image: url("img/bg.png");
     background-attachment: fixed;
     background-size: cover;
-}
-
-@font-face {
-    font-family: 'Red Hat Display';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Red Hat Display'), local('RedHatDisplay-Regular'), url(https://fonts.gstatic.com/s/redhatdisplay/v4/8vIQ7wUr0m80wwYf0QCXZzYzUoTg_T6hR4jNCA.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    padding: 10px 10px;
+    font-family: 'Red Hat Display', sans-serif !important;
 }
 
 .signup_container {
