--- a/flaskr/templates/JoyBotPage.html
+++ b/flaskr/templates/JoyBotPage.html
@@ -34,16 +34,16 @@
 
         <div>
             <a href="">
-                <img src="img/vector.png" style="position: absolute; left: 1100px; top: 685px; z-index: 1;">
+                <img src="..static/img/vector.png" style="position: absolute; left: 1100px; top: 685px; z-index: 1;">
             </a>
             </div>
 
         <div>
-            <img src="img/rectanglechatbot.png" style="position: absolute; width: 1170px; height: 720px; left: 40px; top: 80px; z-index: 0">
+            <img src="../static/img/rectanglechatbot.png" style="position: absolute; width: 1170px; height: 720px; left: 40px; top: 80px; z-index: 0">
         </div>
 
         <div class="right">
-            <img src="img/joychatbot.png" style="position: absolute; width: 410px; height: 600px; left: 1200px; top:240px">
+            <img src="..static/img/joychatbot.png" style="position: absolute; width: 410px; height: 600px; left: 1200px; top:240px">
         </div>
 
     </body>
