--- a/flaskr/templates/JoyBotPage.html
+++ b/flaskr/templates/JoyBotPage.html
@@ -34,7 +34,7 @@
 
         <div>
             <a href="">
-                <img src="..static/img/vector.png" style="position: absolute; left: 1100px; top: 685px; z-index: 1;">
+                <img src="../static/img/vector.png" style="position: absolute; left: 1100px; top: 685px; z-index: 1;">
             </a>
             </div>
 
@@ -43,7 +43,7 @@
         </div>
 
         <div class="right">
-            <img src="..static/img/joychatbot.png" style="position: absolute; width: 410px; height: 600px; left: 1200px; top:240px">
+            <img src="../static/img/joychatbot.png" style="position: absolute; width: 410px; height: 600px; left: 1200px; top:240px">
         </div>
 
     </body>
