--- a/flaskr/templates/LogInPage.html
+++ b/flaskr/templates/LogInPage.html
@@ -13,6 +13,7 @@
     </head>
 
     <body>
+        <!--
          <nav class="nav navbar-default">
             <div class="nav navbar-nav left">
                 <a href=""><b>MoodTracker</b></a>
@@ -39,6 +40,41 @@
         </div>
        <div class="center" style="background-color:#A09EFF; width: 450px; line-height: 100px; margin-top: 80px">
            <a href="">Log In</a>
-       </div>
+       </div> -->
+
+       {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div>
+                        {{ message }}
+                    </div>
+                {% endfor%}
+            {% endif %}
+        {% endwith%}
+
+        <div class="login_container">
+            <div style="text-align: right">
+                <img src="../static/img/x.png" class="close_btn">
+            </div>
+            <form method="POST" action="">
+                {{ form.hidden_tag() }}
+                <fieldset>
+                    <legend>Log In</legend>
+                    <div>
+                        {{ form.username.label }}
+                        {{ form.username(class="input", placeholder="Enter Username") }}
+                    </div>
+                    <div>
+                        {{ form.password.label }}
+                        {{ form.password(class="input", placeholder="Enter Password") }}
+                    </div>
+                </fieldset>
+                <br>
+                <div class="center">
+                    {{ form.submit(class_="black_btn") }}
+                </div>
+            </form>
+        </div>
+
     </body>
 </html>
