--- a/flaskr/static/signuplogin.css
+++ b/flaskr/static/signuplogin.css
@@ -1,12 +1,4 @@
-html, body {
-    background-image: url("img/bg.png");
-    background-attachment: fixed;
-    background-size: cover;
-    padding: 10px 10px;
-    font-family: 'Red Hat Display', sans-serif !important;
-}
-
-.signup_container {
+.login_container, .signup_container {
     background-color: #E8E8FF;
     width: 50vw;
     display: block;
@@ -18,6 +10,7 @@ html, body {
     border-radius: 20px;
     padding: 10px;
 }
+
 .close_btn {
     width: 30px;
     height: 30px;
@@ -42,19 +35,6 @@ html, body {
 
 ::placeholder {
     color: #000000;
-}
-
-.center {
-    text-align: center;
-}
-.black_btn {
-    padding: 7px 3vw;
-    border-radius: 10px;
-    outline: none;
-    border: 0;
-    background: #200E32;
-    color: white;
-    font-size: 17px;
 }
 
 .indent {
