--- a/flaskr/templates/SignUpPage.html
+++ b/flaskr/templates/SignUpPage.html
@@ -7,7 +7,7 @@
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <link href="../static/style.css" rel="stylesheet">
-      <link href="../static/SignUpPage.css" rel="stylesheet">
+      <link href="../static/signuplogin.css" rel="stylesheet">
       <script src="../static/scripts/linking.js"></script>
 
         <title>
