--- a/flaskr/static/mood.css
+++ b/flaskr/static/mood.css
@@ -10,6 +10,7 @@
 .datecal span {
     display: inline-flex;
     align-items: center;
+    font-size: 15px;
 }
 
 .container {
@@ -76,13 +77,19 @@
 }
 .wrapper {
     overflow-y: scroll;
-    height: 20vh;
-    height: 250px;
+    height: 25vh;
+    min-height: 235px;
     border-radius: 15px;
+}
+.message {
+    height: 25vh;
+    min-height: 235px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .grid {
     display: grid;
-    /* height: 150px; */
     grid-template-rows: auto;
     row-gap: 10px;
     padding: 10px;
@@ -133,11 +140,12 @@
 
 .graph {
     border: 1px solid white;
-    width: 80%;
+    width: 70vw;
     margin: auto;
     display: block;
     position: relative;
-    height: 30vh;
+    height: 32vh;
+    min-height: 200px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 2px 2px rgba(0, 0, 0, 0.25);
@@ -176,5 +184,6 @@
 
     .graph {
         width: 100%;
+        min-height: 30vh;
     }
 }
