--- a/flaskr/static/signuplogin.css
+++ b/flaskr/static/signuplogin.css
@@ -43,3 +43,11 @@
 .italicize {
     font-style: italic;
 }
+
+@media only screen and (max-width: 450px) {
+
+    .login_container, .signup_container {
+        width: 90%;
+    }
+
+}
