--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -8,8 +8,9 @@ html, body {
 #nav-bar {
     display: flex;
     margin-bottom: 15px;
+    color: white;
 }
-#nav-bar a {
+#nav-bar a, #nav-bar span {
     color: white;
     text-decoration: none;
     display: inline-block;
@@ -19,6 +20,12 @@ html, body {
     vertical-align: middle;
     justify-content: center;
     align-items: center;
+}
+.navbarlink{
+    margin: 0 2vw 0 0 !important;
+}
+#nav-bar span {
+    margin: 0;
 }
 .active {
     font-weight: 700;
@@ -52,7 +59,7 @@ html, body {
     cursor: pointer;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 500px) {
     html, body {
         background-image: url("img/bg.png");
         background-attachment: fixed;
@@ -69,7 +76,7 @@ html, body {
         align-items: center;
     }
     .right {
-        flex: 3;
+        flex: 1;
         display: inline;
         float: right;
         text-align: right;
