--- a/flaskr/templates/homePage.html
+++ b/flaskr/templates/homePage.html
@@ -45,12 +45,15 @@
             <div class="frontContainer2">
               <div class="frontPage2-boxes" id="moodtracker-box">
                 <h2>mood tracker</h2>
+                <img class="image-icons" id="mood-tracker-icon" src="../static/img/mood-tracker-icon.png">
               </div>
               <div class="frontPage2-boxes" id="moodrandomizer-box">
                 <h2>mood randomizer</h2>
+                <img class="image-icons" id="mood-randomizer-icon" src="../static/img/mood-randomizer-icon.png">
               </div>
               <div class="frontPage2-boxes" id="JoyBot-box">
                 <h2>JoyBot</h2>
+                <img class="image-icons" id="joy-image-icon" src="../static/img/joy-image-icon.png">
               </div>
             </div>
 
