--- a/flaskr/templates/JoyBotPage.html
+++ b/flaskr/templates/JoyBotPage.html
@@ -15,9 +15,9 @@
     <body>
         <nav class="nav navbar-default">
            <div class="nav navbar-nav left">
-               <a href=""><b>MoodTracker</b></a>
-               <a href=""><b>MoodRandomizer</b></a>
-               <a href=""><b>JoyBot</b></a>
+               <a href="{{ url_for('mood_tracker') }}"><b>moodtracker</b></a>
+               <a href=""><b>moodrandomizer</b></a>
+               <a href=""><b>joybot</b></a>
                <div class="nav navbar-nav right">
                    <a href="">LogIn</a>
                </div>
