--- a/flaskr/templates/JoyBotPage.html
+++ b/flaskr/templates/JoyBotPage.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 <!DOCTYPE html>
 <html lang='en'>
     <head>
@@ -13,7 +15,7 @@
     </head>
 
     <body>
-        <nav class="nav navbar-default">
+       <!-- <nav class="nav navbar-default">
            <div class="nav navbar-nav left">
                <a href="{{ url_for('mood_tracker') }}"><b>moodtracker</b></a>
                <a href=""><b>moodrandomizer</b></a>
@@ -22,7 +24,7 @@
                    <a href="">LogIn</a>
                </div>
            </div> 
-        </nav>
+        </nav> -->
         
         <hr style="position: relative; margin-top: 600px; margin-left: 40px; width: 1150px; z-index: 1; border-color: black;">
 
