HomePage Linking Edits w/o extra navbar - 12/29/2020

--- a/flaskr/templates/homePage.html
+++ b/flaskr/templates/homePage.html
@@ -10,7 +10,7 @@
     {% endblock %}
 
     {% block content %}
-        <nav class="nav navbar-default">
+        <!--<nav class="nav navbar-default">
           <div class="nav navbar-nav left">
             <a href=""><b>moodtracker</b></a>
             <a href=""><b>moodrandomizer</b></a>
@@ -19,7 +19,7 @@
               <a href="">log in</a>
             </div>
           </div>
-        </nav>
+        </nav>-->
 
         <section id="front">
             <div class="frontContainer">
