HomePage Title Edit - 12/29/2020

--- a/flaskr/templates/homePage.html
+++ b/flaskr/templates/homePage.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
     {% block title %}
-        <title>JoyBot</title>
+        JoyBot
     {% endblock %}
 
     {% block content %}
