--- a/flaskr/templates/temp_JoyBotPage.html
+++ b/flaskr/templates/temp_JoyBotPage.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles/style_bot.css') }}"> -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='style_bot.css') }}">
+  <link rel="stylesheet" href="../static/style_bot.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
