--- a/flaskr/templates/MoodRandomizerLaugh.html
+++ b/flaskr/templates/MoodRandomizerLaugh.html
@@ -16,9 +16,9 @@
 
     <div class="center">
 
-        <h1>Laugh</h1>
+        <h1>Amused</h1>
 
-        <h2>Here's something that might make you laugh: </h2>
+        <h2>Here's something that might make you amused: </h2>
         <!-- <iframe width="600" height="315" src="https://www.youtube.com/embed/LJrvJPz4nM0"> </iframe> -->
         <br>
 
@@ -33,8 +33,7 @@
             <img src={{link}} style="width:500px;height:315px;" alt="alternatetext">
 
         {% else %}
-            <h3 style="color:white">{{title}}</h3>
-            <p>{{link}}</p>
+            <h2>{{link}}</h2>
 
         {% endif %}
 
