--- a/flaskr/templates/moodrandrelax.html
+++ b/flaskr/templates/moodrandrelax.html
@@ -34,8 +34,7 @@
 
 
         {% else %}
-            <h2>{{title}}</h2>
-            <p>{{link}}</p>
+            <h2>{{link}}</h2>
 
         {% endif %}
 
