--- a/flaskr/static/JoyBotPage.css
+++ b/flaskr/static/JoyBotPage.css
@@ -1,8 +1,157 @@
+/* give credit */
+
+:root {
+    --body-bg: linear-gradient(135deg, white 0%, white 100%);
+    --msger-bg: #fff;
+    --border: 2px solid #ddd;
+    --left-msg-bg: #e9e8ff;
+    --right-msg-bg: #e9e8ff;
+}
+
 html, body {
     background-image: url("img/bg.png");
     background-attachment: fixed;
     background-size: cover;
+    box-sizing: border-box;
+    display: inline;
+    float: left;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
+*,
+*:before,
+*:after {
+margin: 0;
+padding: 0;
+box-sizing: inherit;
+}
+
+.msger {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 867px;
+    margin: 25px 10px;
+    height: calc(100% - 50px);
+    border: var(--border);
+    border-radius: 5px;
+    background: var(--msger-bg);
+    box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
+    }
+    
+    .msger-header {
+    /* display: flex; */
+    font-size: medium;
+    justify-content: space-between;
+    padding: 10px;
+    text-align: center;
+    border-bottom: var(--border);
+    background: #A09EFF;
+    color: #ffffff;
+    }
+    
+    .msger-chat {
+    flex: 1;
+    overflow-y: auto;
+    padding: 10px;
+    }
+    .msger-chat::-webkit-scrollbar {
+    width: 6px;
+    }
+    .msger-chat::-webkit-scrollbar-track {
+    background: #ddd;
+    }
+    .msger-chat::-webkit-scrollbar-thumb {
+    background: #bdbdbd;
+    }
+    .msg {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 10px;
+    }
+    
+    .msg-img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    background: #ddd;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 50%;
+    }
+    .msg-bubble {
+    max-width: 450px;
+    padding: 15px;
+    border-radius: 15px;
+    background: var(--left-msg-bg);
+    }
+    .msg-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    }
+    .msg-info-name {
+    margin-right: 10px;
+    font-weight: bold;
+    }
+    .msg-info-time {
+    font-size: 0.85em;
+    }
+    
+    .left-msg .msg-bubble {
+    border-bottom-left-radius: 0;
+    }
+    
+    .right-msg {
+    flex-direction: row-reverse;
+    }
+    .right-msg .msg-bubble {
+    background: var(--right-msg-bg);
+    color: rgb(0, 0, 0);
+    border-bottom-right-radius: 0;
+    }
+    .right-msg .msg-img {
+    margin: 0 0 0 10px;
+    }
+    
+    .msger-inputarea {
+    display: flex;
+    padding: 10px;
+    border-top: var(--border);
+    background: #A09EFF;
+    }
+    .msger-inputarea * {
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    font-size: 1em;
+    }
+    .msger-input {
+    flex: 1;
+    background: #ffffff;
+    }
+    .msger-send-btn {
+    margin-left: 10px;
+    background: #ffffff;
+    color: #A09EFF;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.23s;
+    }
+    .msger-send-btn:hover {
+    background: #cdccfa;
+    }
+
+    .msger-chat {
+        background-color: #fff;
+        background-image: url("img/rectanglechatbot.png");
+        background-position: center;
+    }
 
 @font-face {
     font-family: 'Red Hat Display';
@@ -13,7 +162,7 @@ html, body {
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-div.navbar-nav {
+/* div.navbar-nav {
     display: flex;
     margin-bottom: 10px;
 }
@@ -57,7 +206,7 @@ div.center {
     line-height: 150px;
     font-family: 'Red Hat Display';
     font-size: xx-large;
-}
+} 
 
 input {
     background-color: white;
@@ -95,4 +244,4 @@ a:visited {
 a:hover {
     color: #ffffff;
     text-decoration: none;
-}
+} */
